salt/downloads/bugs/fixes/bug_issue_descriptions/salt-58413
**Description**
Installing the library with "setup.py install" causes this error:

```
byte-compiling build/bdist.linux-x86_64/egg/github/PaginatedList.py to PaginatedList.pyc
  File "build/bdist.linux-x86_64/egg/github/PaginatedList.py", line 236
    url, rel, *rest = linkHeader.split("; ")
              ^
SyntaxError: invalid syntax

byte-compiling build/bdist.linux-x86_64/egg/github/GitObject.py to GitObject.pyc
```

**Setup**
Python 2.7

**Steps to Reproduce the behavior**
From the source folder:
`sudo ./setup.py install
`

**Expected behavior**
We expect the library to install without errors.

**Versions Report**
<details><summary>salt --versions-report</summary>
(Provided by running salt --versions-report. Please also mention any differences in master/minion versions.) 
```
Salt Version:
           Salt: 2017.7.4
 
Dependency Versions:
           cffi: Not Installed
       cherrypy: Not Installed
       dateutil: 2.6.1
      docker-py: Not Installed
          gitdb: Not Installed
      gitpython: Not Installed
          ioflo: Not Installed
         Jinja2: 2.10
        libgit2: 0.26.0
        libnacl: Not Installed
       M2Crypto: Not Installed
           Mako: 1.0.7
   msgpack-pure: Not Installed
 msgpack-python: 0.5.6
   mysql-python: Not Installed
      pycparser: Not Installed
       pycrypto: 2.6.1
   pycryptodome: Not Installed
         pygit2: 0.26.2
         Python: 3.6.9 (default, Jul 17 2020, 12:50:27)
   python-gnupg: Not Installed
         PyYAML: 3.12
          PyZMQ: 16.0.2
           RAET: Not Installed
          smmap: Not Installed
        timelib: Not Installed
        Tornado: 4.5.3
            ZMQ: 4.2.5
 
System Versions:
           dist: Ubuntu 18.04 bionic
         locale: UTF-8
        machine: x86_64
        release: 4.15.0-106-generic
         system: Linux
        version: Ubuntu 18.04 bionic
 
```
</details>

**Additional context**
I needed to install from the source as the version available via pip was too old.
